--- a/style.css
+++ b/style.css
@@ -350,180 +350,7 @@ h3{
 }
 
 /* footer*/
-footer {
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    background: linear-gradient(rgba(0, 14, 67, 0.7), rgba(7, 25, 104, 0.7));
-    color: #fff;
-    padding: 100px 0 30px;
-    border-top-left-radius: 125px;
-    font-size: 14px;
-    line-height: 20px;
-}
-
-.rowz{
-    width:95% ;
-    margin: auto;
-    display: flex;
-    flex-wrap:wrap;
-    align-items: flex-start;
-    justify-content: space-between;
-}
-
-.colz{
-    flex-basis: 25%;
-    padding: 10px;
-}
-
-.logof {
-    width: 200px;
-    margin-bottom: 30px;
-}
-
-.colz h3{
-    width: fit-content;
-    margin-bottom: 40px;
-    position: relative;
-}
-ul li{
-    list-style: none;
-    margin-bottom: 12px;
-}
-ul li a{
-    text-decoration: none;
-    color: white;
-}
-
-a.Address {
-    /* Your styling properties here */
-    color: white; /* Example color */
-    text-decoration: none; /* Example text decoration */
-}
-a.Address:hover {
-    text-decoration: underline; /* Underline effect on hover */
-}
-
-form {
-    max-width: 300px; /* Adjust the width as needed */
-    margin: 0 auto; /* Center the form */
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 50px;
-
-}
-
-.form-cont{
-    display: flex;
-}
-
-label {
-    display: block;
-    margin-bottom: 10px;
-}
-
-input[type="text"],
-input[type="email"],
-textarea {
-    border: none;
-    border-bottom: 1px solid #ccc; /* Bottom border */
-    width: 100%;
-    padding: 5px;
-    margin-bottom: 10px;
-    box-sizing: border-box; /* Ensure padding and border are included in the width */
-    resize: none;
-}
-
-input[type="submit"] {
-    display: inline-block;
-    text-decoration: none;
-    color: #fff;
-    border: 1px solid #fff;
-    padding: 12px 34px;
-    background: transparent;
-    position: relative;
-    cursor: pointer;
-}
-
-input[type="submit"]:hover {
-    border: 1px solid #7e0a02;
-    background: #7e0a02;
-    transition: 1s;
-}
-
-hr{
-    width:90% ;
-    border: 0;
-    border-bottom: 1px solid #ccc;
-    margin: 20px auto;
-}
-.social-icons {
-    margin-top: 10px;
-    text-align: center; /* Center align social icons */
-}
-
-.social-icons i {
-    display: inline-block; /* Ensure icons are displayed inline */
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    font-size: 20px;
-    color: #000;
-    background: #fff;
-    margin-right: 15px;
-    text-align: center;
-    border-radius: 50%;
-}
-
-.copyright {
-    text-align: center; /* Center align copyright text */
-    margin-top: 10px;
-    margin-bottom: 1px;
-}
-
-.underline{
-    width: 100%;
-    height: 5px;
-    background: white;
-    border-radius: 3px;
-    position: absolute;
-    top: 25px;
-    left: 0;
-    overflow: hidden;
-}
-.underline span{
-    width: 15px;
-    height: 100%;
-    background: #7e0a02;
-    border-radius: 3px;
-    position: absolute;
-    top: 0;
-    left: 10px;
-    animation: moving 2s linear infinite;
-}
-
-@keyframes moving{
-    0%{
-        left:-20px;
-    }
-    100%{
-        left:100%;
-    }
-}
-
-@media(max-width: 700px) {
-    footer {
-        bottom: unset;
-    }
-    .colz{
-        flex-basis: 100%;
-
-    }
-    .rowz {
-        flex-direction: column; /* Change layout to column on smaller screens */
-        align-items: flex-start;
-    }
-}
+r*/
 
 /* about us */
 .rows {
